[workspace]
resolver = "2"

members = [
    "p4",
    "x4c",
    "x4c_error_codes",
    "codegen/common",
    "codegen/rust",
    "codegen/htq",
    "lang/p4rs",
    "lang/p4-macro",
    "lang/p4-macro-test",
    "lang/prog/sidecar-lite",
    "test",
    "book/code",
]

[workspace.dependencies]
p4-macro = { path = "lang/p4-macro" }
p4-cg = { path = "codegen/common" }
p4-rust = { path = "codegen/rust" }
p4-htq = { path = "codegen/htq" }
p4rs = { path = "lang/p4rs" }
tests = { path = "test" }

anyhow = "1"
bitvec = "1.0"
clap = { version = "4", features = ["color", "derive"] }
colored = "3"
htq = { git = "https://github.com/oxidecomputer/htq", branch = "sector-001" }
libloading = { version = "0.8" }
num = { version = "0.4", features = ["serde"] }
p4 = { path = "p4" }
pnet = "0.35"
prettyplease = "0.2"
proc-macro2 = "1.0"
quote = "1.0"
rand = "0.9.2"
regex = "1"
serde = "1.0"
serde_tokenstream = "0.2"
syn = "2.0"
tempfile = "3.3"
thiserror = "1.0.63"
usdt = "0.5.0"
xfr = { git = "https://github.com/oxidecomputer/xfr" }
