[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dependencies]
num.workspace = true
p4-macro.workspace = true
p4rs.workspace = true
xfr.workspace = true
bitvec.workspace = true
pnet.workspace = true
colored.workspace = true
usdt.workspace = true
rand.workspace = true
anyhow.workspace  = true

[dev-dependencies]
libloading.workspace = true
