load("@rules_rust//rust:defs.bzl", "rust_proc_macro")

rust_proc_macro(
    name = "p4-macro",
    srcs = glob(["src/**/*.rs"]),
    deps = [
        "//p4",
        "//codegen/rust:p4-rust",
        "@crates//:proc-macro2",
        "@crates//:syn",
        "@crates//:serde_tokenstream",
        "@crates//:serde",
    ],
    visibility = ["//visibility:public"],
)
